<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LibreTrivia</string>
    <string name="app_description">An open source trivia game.</string>

    <!-- Category Names -->
    <string name="category_general_knowledge">General Knowledge</string>
    <string name="category_entertainment_books">Entertainment: Books</string>
    <string name="category_entertainment_film">Entertainment: Film</string>
    <string name="category_entertainment_music">Entertainment: Music</string>
    <string name="category_entertainment_musicals_theatres">Entertainment: Musicals &amp; Theatres</string>
    <string name="category_entertainment_television">Entertainment: Television</string>
    <string name="category_entertainment_video_games">Entertainment: Video Games</string>
    <string name="category_entertainment_board_games">Entertainment: Board Games</string>
    <string name="category_entertainment_japanese_anime_manga">Entertainment: Japanese Anime &amp; Manga</string>
    <string name="category_entertainment_cartoon_animations">Entertainment: Cartoons &amp; Animation</string>
    <string name="category_entertainment_comics">Entertainment: Comics</string>
    <string name="category_science_nature">Science &amp; Nature</string>
    <string name="category_science_computers">Science: Computers</string>
    <string name="category_science_mathematics">Science: Mathematics</string>
    <string name="category_science_gadgets">Science: Gadgets</string>
    <string name="category_mythology">Mythology</string>
    <string name="category_sports">Sports</string>
    <string name="category_geography">Geography</string>
    <string name="category_history">History</string>
    <string name="category_politics">Politics</string>
    <string name="category_art">Art</string>
    <string name="category_celebrities">Celebrities</string>
    <string name="category_animals">Animals</string>
    <string name="category_vehicles">Vehicles</string>

    <!-- Difficulty Names -->
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>

    <!-- Question Type Names -->
    <string name="question_type_multiple">Multiple Choice</string>
    <string name="question_type_boolean">True / False</string>

    <!-- UI -->
    <string name="ui_settings">Settings</string>
    <string name="ui_about">About</string>
    <string name="ui_play">Play</string>
    <string name="ui_start_game">Start Game</string>
    <string name="ui_create_question" tools:ignore="MissingTranslation">Create Question</string>
    <string name="ui_view_questions" tools:ignore="MissingTranslation">View Custom Questions</string>
    <string name="ui_any">Any</string>
    <string name="ui_true">True</string>
    <string name="ui_false">False</string>
    <string name="ui_correct">Correct</string>
    <string name="ui_wrong">Wrong</string>
    <string name="ui_amount">Questions</string>
    <string name="ui_type">Question Type</string>
    <string name="ui_create_category">Question Category</string>
    <string name="ui_question_text">Input the Question</string>
    <string name="ui_category">Category</string>
    <string name="ui_difficulty">Difficulty</string>
    <string name="ui_question_progress">%1$d⁄%2$d</string>
    <string name="ui_quit_game">Quit Game</string>
    <string name="ui_quit_game_msg">Are you sure you want to quit this game?</string>
    <string name="ui_results_correct">Correct Answers</string>
    <string name="ui_results_wrong">Wrong Answers</string>
    <string name="ui_results_total">Total Questions</string>
    <string name="ui_high_score">High Score</string>
    <string name="ui_new_high_score">**NEW HIGH SCORE**</string>
    <string name="ui_return_to_menu">Return To Menu</string>
    <string name="ui_create_correct_header">Input Correct Answer</string>
    <string name="ui_create_incorrect_header">Input incorrect Answers</string>
    <string name="ui_clear_high_scores">Clear</string>
    <string name="ui_clear_scores">Clear High Scores</string>
    <string name="ui_clear_scores_msg">Are you sure you want to clear the high scores?</string>
    <string name="ui_classic_mode" tools:ignore="MissingTranslation">Classic Mode</string>
    <string name="ui_custom_mode" tools:ignore="MissingTranslation">Custom Mode</string>
    <string name="ui_share" tools:ignore="MissingTranslation">Share</string>
    <string name="ui_scan_for_devices">Scan for Devices</string>
    <string name="ui_enable_discoverable">Enable Discoverable</string>

    <!-- Title Strings -->
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>

    <!-- Error Strings -->
    <string name="error_network"><b>Networkin error!</b>\n Could not connect to a network.</string>
    <string name="error_no_trivia_results"><b>No trivia results!</b>\n Was not able to find trivia questions that satisfied all options.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Setting Strings-->
    <string name="pref_category_sound_title">Sound</string>
    <string name="pref_sound_answer_title">Answer Sound Effect</string>
    <string name="pref_category_appearances_title">Appearances</string>
    <string name="pref_dark_mode_title">Dark Mode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
