<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.trytonvanmeer.libretrivia.activities.MainActivity">


    <!-- Classic Mode Button -->
    <Button
        android:id="@+id/button_classic_mode"
        style="@style/Button"
        android:layout_width="185dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="481dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/ui_classic_mode"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_high_score"
        app:layout_constraintEnd_toStartOf="@+id/button_custom_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Custom Mode Button -->
    <Button
        android:id="@+id/button_custom_mode"
        style="@style/Button"
        android:layout_width="185dp"
        android:layout_height="70dp"
        android:layout_marginTop="481dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/ui_custom_mode"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_classic_mode"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- High Score Button -->
    <Button
        android:id="@+id/button_high_score"
        style="@style/Button"
        android:layout_width="185dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/ui_high_score"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_classic_mode" />

    <!-- Share Button -->
    <Button
        android:id="@+id/button2"
        style="@style/Button"
        android:layout_width="185dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/ui_share"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_high_score"
        app:layout_constraintTop_toBottomOf="@+id/button_custom_mode" />

    <!-- Loco Icon -->
    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="171dp"
        android:layout_height="166dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="logo icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        app:srcCompat="@mipmap/ic_launcher_round" />


</androidx.constraintlayout.widget.ConstraintLayout>
