<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.QuestionCreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextLabel"
                android:labelFor="@id/spinner_type"
                android:text="@string/ui_type" />

            <Spinner
                android:id="@+id/spinner_type"
                style="@style/Spinner" />

            <TextView
                style="@style/TextLabel"
                android:labelFor="@id/spinner_type"
                android:text="@string/ui_create_category" />

            <Spinner
                android:id="@+id/spinner_create_category"
                style="@style/Spinner" />

            <TextView
                style="@style/TextLabel"
                android:labelFor="@id/spinner_difficulty"
                android:text="Question Difficulty" />

            <Spinner
                android:id="@+id/spinner_create_difficulty"
                style="@style/Spinner" />

            <TextView
                style="@style/TextLabel"
                android:labelFor="@+id/question_text"
                android:text="@string/ui_question_text" />

            <EditText
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Question?"
                android:autofillHints=""
                android:inputType="textPersonName" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <FrameLayout
                    android:id="@+id/frame_create_type_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>